--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,13 @@ authors = [
 ]
 
 [features]
+default = ["memory-store", "cookie-store"]
+memory-store = ["async-rwlock"]
+cookie-store = ["bincode"]
 
 [dependencies]
 async-trait = "0.1.24"
-async-std = "1.6.0"
+async-rwlock = { version = "1.3.0", optional = true }
 serde = { version = "1.0.114", features = ["rc", "derive"] }
 rand = "0.7.3"
 base64 = "0.12.3"
@@ -25,7 +28,7 @@ sha2 = "0.9.1"
 hmac = "0.8.1"
 serde_json = "1.0.56"
 kv-log-macro = "1.0.7"
-bincode = "1.3.1"
+bincode = { version = "1.3.1", optional = true }
 chrono = { version = "0.4.13", default-features = false, features = ["clock", "serde", "std"] }
 anyhow = "1.0.31"
 blake3 = "0.3.5"
